<resources>
    <string name="action_account_properties">View</string>
    <string name="all_users_channel_movement_title">All users channel movement</string>
    <string name="label_log_channel">Channel Create/Update</string>
    <string name="label_log_file_transfer">File Transfer</string>
    <string name="label_log_server_update">Server Update</string>
    <string name="label_log_user_kick">User Kick/Ban</string>
    <string name="label_log_user_login">User Login/Logout</string>
    <string name="pref_cat_tts">Text-To-Speech settings</string>
    <string name="pref_cat_tts_events">General Text-To-Speech messages</string>
    <string name="pref_cat_tts_subscription">Subscription Text-To-Speech messages</string>
    <string name="pref_cat_tts_transmission">Transmit Control Text-To-Speech messages</string>
    <string name="pref_master_tts_toggle">Enable all TTS event notifications</string>
    <string name="pref_show_log_messages">Show log messages in chat history</string>
    <string name="pref_sound_app_open">Sound when opening application</string>
    <string name="pref_sound_myself_join">Sound when joining channel myself</string>
    <string name="pref_sound_myself_leave">Sound when leaving channel myself</string>
    <string name="pref_summary_a11y_volume">Text to speech messages will be played at the accessibility stream volume</string>
    <string name="pref_summary_bearwareid">Setup BearWare.dk WebLogin</string>
    <string name="pref_summary_broadcast_message">Announce broadcast messages</string>
    <string name="pref_summary_broadcast_message_audio_icon">Play sound when broadcast message is received</string>
    <string name="pref_summary_channel_join">Announce name of the user joining the channel</string>
    <string name="pref_summary_channel_leave">Announce name of the user leaving the channel</string>
    <string name="pref_summary_channel_message">Announce channel messages</string>
    <string name="pref_summary_channel_message_audio_icon">Play sound when channel message is received</string>
    <string name="pref_summary_channel_message_sent">Announce channel messages sent</string>
    <string name="pref_summary_channel_message_sent_audio_icon">Play sound when channel message is sent</string>
    <string name="pref_summary_clientname">Custom client name displayed for your user</string>
    <string name="pref_summary_default_file_manager">Choose the default file manager to open files</string>
    <string name="pref_summary_files_update_audio_icon">Play sound when files are added or removed</string>
    <string name="pref_summary_gender">Check for female icon</string>
    <string name="pref_summary_intercept_audio_icon">Play sound when intercept starts or ends</string>
    <string name="pref_summary_move_talking">Move talking users to the top of users list</string>
    <string name="pref_summary_private_message">Announce private messages</string>
    <string name="pref_summary_private_message_audio_icon">Play sound when private message is received</string>
    <string name="pref_summary_rx_tx_audio_icon">Play sound when TX button is pressed</string>
    <string name="pref_summary_server_login">Announce name of user logging in</string>
    <string name="pref_summary_server_logout">Announce name of user logging out</string>
    <string name="pref_summary_server_lost_audio_icon">Play sound when connection is dropped</string>
    <string name="pref_summary_show_usernames">Show usernames instead of nicknames</string>
    <string name="pref_summary_speech_engine">Select one of the installed speech engines, different from system settings</string>
    <string name="pref_summary_subscription_broadcast_msg">Announce subscription of broadcast messages</string>
    <string name="pref_summary_subscription_channel_msg">Announce subscription of channel messages</string>
    <string name="pref_summary_subscription_desk">Announce subscription of desktop sessions</string>
    <string name="pref_summary_subscription_intercept_channel_msg">Announce intercept of channel messages</string>
    <string name="pref_summary_subscription_intercept_desk">Announce intercept of desktop sessions</string>
    <string name="pref_summary_subscription_intercept_media">Announce intercept of media streams</string>
    <string name="pref_summary_subscription_intercept_user_msg">Announce intercept of user messages</string>
    <string name="pref_summary_subscription_intercept_vid">Announce intercept of video streams</string>
    <string name="pref_summary_subscription_intercept_voice">Announce intercept of voice streams</string>
    <string name="pref_summary_subscription_media">Announce subscription of media streams</string>
    <string name="pref_summary_subscription_user_msg">Announce subscription of user messages</string>
    <string name="pref_summary_subscription_vid">Announce subscription of video streams</string>
    <string name="pref_summary_subscription_voice">Announce subscription of voice streams</string>
    <string name="pref_summary_transmit_channel_msg">Announce transmission of channel messages</string>
    <string name="pref_summary_transmit_desk">Announce transmission of desktop sessions</string>
    <string name="pref_summary_transmit_media">Announce transmission of media streams</string>
    <string name="pref_summary_transmit_vid">Announce transmission of video streams</string>
    <string name="pref_summary_transmit_voice">Announce transmission of voice streams</string>
    <string name="pref_summary_transmitready_icon">Play sound when transmit ready in No Interruptions channel</string>
    <string name="pref_summary_use_announcements">Text-to-speech messages will be announced through currently running accessibility service</string>
    <string name="pref_summary_userjoin_icon">Play sound when user joins to the current channel</string>
    <string name="pref_summary_userleft_icon">Play sound when user leaves the current channel</string>
    <string name="pref_summary_userloggedin_icon">Play sound when an user logs in</string>
    <string name="pref_summary_userloggedoff_icon">Play sound when an user logs off</string>
    <string name="pref_summary_vox_audio_icon">Play sound when voice activation button is pressed</string>
    <string name="pref_summary_vox_triggered_icon">Play sound when voice activation is triggered</string>
    <string name="pref_title_a11y_volume">Use accessibility stream volume</string>
    <string name="pref_title_bearwareid">BearWare.dk WebLogin</string>
    <string name="pref_title_broadcast_message">Broadcast messages</string>
    <string name="pref_title_broadcast_message_audio_icon">Broadcast message</string>
    <string name="pref_title_channel_join">User joins the channel</string>
    <string name="pref_title_channel_leave">User leaves the channel</string>
    <string name="pref_title_channel_message">Channel messages</string>
    <string name="pref_title_channel_message_audio_icon">Channel message received</string>
    <string name="pref_title_channel_message_sent">Sent channel messages</string>
    <string name="pref_title_channel_message_sent_audio_icon">Channel message sent</string>
    <string name="pref_title_clientname">Client name</string>
    <string name="pref_title_default_file_manager">Default file manager</string>
    <string name="pref_title_files_update_audio_icon">File list updated</string>
    <string name="pref_title_gender">Gender</string>
    <string name="pref_title_intercept_audio_icon">Intercept sound</string>
    <string name="pref_title_keep_screen_on">Keep screen on when connected</string>
    <string name="pref_title_move_talking">Move talking users to top</string>
    <string name="pref_title_nickname">Nickname</string>
    <string name="pref_title_private_message">Private messages</string>
    <string name="pref_title_private_message_audio_icon">Private message</string>
    <string name="pref_title_proximity_sensor">Proximity sensor</string>
    <string name="pref_title_rx_tx_audio_icon">Voice transmission toggle</string>
    <string name="pref_title_server_login">User logs on the server</string>
    <string name="pref_title_server_logout">User logs out of the server</string>
    <string name="pref_title_server_lost_audio_icon">Server connection lost</string>
    <string name="pref_title_show_usernames">Show usernames</string>
    <string name="pref_title_speech_engine">Text-To-Speech engine selection</string>
    <string name="pref_title_statusmsg">Status message</string>
    <string name="pref_title_subscription_broadcast_msg">Broadcast messages subscription</string>
    <string name="pref_title_subscription_channel_msg">Channel messages subscription</string>
    <string name="pref_title_subscription_desk">Desktop session subscription</string>
    <string name="pref_title_subscription_intercept_channel_msg">Channel messages intercept</string>
    <string name="pref_title_subscription_intercept_desk">Desktop session intercept</string>
    <string name="pref_title_subscription_intercept_media">Media stream intercept</string>
    <string name="pref_title_subscription_intercept_user_msg">User messages intercept</string>
    <string name="pref_title_subscription_intercept_vid">Video stream intercept</string>
    <string name="pref_title_subscription_intercept_voice">Voice stream intercept</string>
    <string name="pref_title_subscription_media">Media stream subscription</string>
    <string name="pref_title_subscription_user_msg">User messages subscription</string>
    <string name="pref_title_subscription_vid">Video stream subscription</string>
    <string name="pref_title_subscription_voice">Voice stream subscription</string>
    <string name="pref_title_transmit_channel_msg">Channel message transmission toggled</string>
    <string name="pref_title_transmit_desk">Desktop session transmission toggled</string>
    <string name="pref_title_transmit_media">Media stream transmission toggled</string>
    <string name="pref_title_transmit_vid">Video stream transmission toggled</string>
    <string name="pref_title_transmit_voice">Voice stream transmission toggled</string>
    <string name="pref_title_transmitready_icon">Exclusive mode toggled</string>
    <string name="pref_title_use_announcements">Use announcement events</string>
    <string name="pref_title_userjoin_icon">User joined channel</string>
    <string name="pref_title_userleft_icon">User left channel</string>
    <string name="pref_title_userloggedin_icon">User logged in</string>
    <string name="pref_title_userloggedoff_icon">User logged off</string>
    <string name="pref_title_vibrate">Vibrate on PTT</string>
    <string name="pref_title_vox_audio_icon">Voice activation toggle</string>
    <string name="pref_title_vox_triggered_icon">Voice activation triggered</string>
    <string name="pref_tts_language_behavior_summary">Choose whether TTS follows app language or uses system default</string>
    <string name="pref_tts_language_behavior_title">TTS Language Behavior</string>
    <string name="pref_tts_myself_join">Myself join to channel</string>
    <string name="pref_tts_myself_leave">Myself leave from channel</string>
    <string name="pref_tts_transmission_control_title">Transmission control rights</string>
    <string name="pref_tts_typing">User typing status</string>
    <string name="private_message_sent_title">Sent private messages</string>
    <string name="pref_title_clientname_preset">Client Preset / OS</string>
    <string name="pref_summary_clientname_preset">Quickly choose an OS or client type for masking</string>
    <string name="pref_check_updates">Check for updates</string>
    <string name="pref_summary_check_updates">Check GitHub for latest releases and updates</string>
    <string name="pref_title_battery_optimization">Ignore battery optimization</string>
    <string name="pref_summary_battery_optimization">Allow app to run in background without being killed by Android</string>
</resources>