<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/pref_title_userjoin_icon" android:key="userjoin_icon" android:summary="@string/pref_summary_userjoin_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_userleft_icon" android:key="userleft_icon" android:summary="@string/pref_summary_userleft_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_server_lost_audio_icon" android:key="server_lost_audio_icon" android:summary="@string/pref_summary_server_lost_audio_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_rx_tx_audio_icon" android:key="rx_tx_audio_icon" android:summary="@string/pref_summary_rx_tx_audio_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_vox_audio_icon" android:key="voiceact_audio_icon" android:summary="@string/pref_summary_vox_audio_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_vox_triggered_icon" android:key="voiceact_triggered_icon" android:summary="@string/pref_summary_vox_triggered_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_intercept_audio_icon" android:key="intercept_audio_icon" android:summary="@string/pref_summary_intercept_audio_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_private_message_audio_icon" android:key="private_message_audio_icon" android:summary="@string/pref_summary_private_message_audio_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_channel_message_audio_icon" android:key="channel_message_audio_icon" android:summary="@string/pref_summary_channel_message_audio_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_channel_message_sent_audio_icon" android:key="channel_message_sent_audio_icon" android:summary="@string/pref_summary_channel_message_sent_audio_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_broadcast_message_audio_icon" android:key="broadcast_message_audio_icon" android:summary="@string/pref_summary_broadcast_message_audio_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_files_update_audio_icon" android:key="files_updated_audio_icon" android:summary="@string/pref_summary_files_update_audio_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_transmitready_icon" android:key="transmitready_icon" android:summary="@string/pref_summary_transmitready_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_userloggedin_icon" android:key="userloggedin_icon" android:summary="@string/pref_summary_userloggedin_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_userloggedoff_icon" android:key="userloggedoff_icon" android:summary="@string/pref_summary_userloggedoff_icon" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_sound_myself_join" android:key="pref_sound_myself_join" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_sound_myself_leave" android:key="pref_sound_myself_leave" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_sound_app_open" android:key="pref_sound_app_open" android:defaultValue="true" />
</PreferenceScreen>