<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:singleLine="true" android:selectAllOnFocus="true" android:title="@string/pref_title_nickname" android:key="nickname_text" />
    <EditTextPreference android:singleLine="true" android:selectAllOnFocus="true" android:title="@string/pref_title_statusmsg" android:key="statusmsg_text" />
    <CheckBoxPreference android:title="@string/pref_title_gender" android:key="gender_checkbox" android:summary="@string/pref_summary_gender" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/pref_title_bearwareid" android:key="bearwareid_checkbox" android:summary="@string/pref_summary_bearwareid" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/pref_title_move_talking" android:key="movetalk_checkbox" android:summary="@string/pref_summary_move_talking" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_show_usernames" android:key="showusernames_checkbox" android:summary="@string/pref_summary_show_usernames" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/pref_title_vibrate" android:key="vibrate_checkbox" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/pref_title_proximity_sensor" android:key="proximity_sensor_checkbox" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/pref_title_keep_screen_on" android:key="keep_screen_on_checkbox" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/pref_show_log_messages" android:key="show_log_messages" android:defaultValue="true" />
    <ListPreference android:entries="@array/clientname_preset_entries" android:title="@string/pref_title_clientname_preset" android:key="clientname_preset" android:summary="@string/pref_summary_clientname_preset" android:defaultValue="default" android:entryValues="@array/clientname_preset_values" />
    <EditTextPreference android:singleLine="true" android:selectAllOnFocus="true" android:title="@string/pref_title_clientname" android:key="clientname_text" android:summary="@string/pref_summary_clientname" />
    <ListPreference android:entries="@array/default_file_manager_entries" android:title="@string/pref_title_default_file_manager" android:key="default_file_manager" android:summary="@string/pref_summary_default_file_manager" android:defaultValue="ask" android:entryValues="@array/default_file_manager_values" />
    <Preference android:title="@string/pref_title_battery_optimization" android:key="battery_optimization" android:summary="@string/pref_summary_battery_optimization" />
    <Preference android:title="@string/pref_check_updates" android:key="check_updates" android:summary="@string/pref_summary_check_updates" />
</PreferenceScreen>