<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <CheckBox android:id="@+id/chk_log_user_login" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/label_log_user_login" />
        <CheckBox android:id="@+id/chk_log_user_kick" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/label_log_user_kick" />
        <CheckBox android:id="@+id/chk_log_channel_create" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/label_log_channel" />
        <CheckBox android:id="@+id/chk_log_server_update" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/label_log_server_update" />
        <CheckBox android:id="@+id/chk_log_file_transfer" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/label_log_file_transfer" />
    </LinearLayout>
</ScrollView>